--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a id="brand" class="navbar-brand" href="#">Now Im Listening To...</a>
+					<a id="brand" class="navbar-brand" href="https://nilt.herokuapp.com/">Now Im Listening To...</a>
 				</section>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
