added meta tags for facebook sharing

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta property="og:title" content="Now Im Listening To.." />
+		<meta property="og:type" content="Music player" />
+		<meta property="og:url" content="https://nilt.herokuapp.com/" />
+		<meta property="og:image" content="http://i.imgur.com/szsdkHs.jpg" />
+		<meta property="og:description" content="This is a collaborative music player that plays the music people post on our facebook group wall. Join us!" />
+
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		<title>Now Im Listening To ...</title>
 
