--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta property="og:title" content="Now Im Listening To.." />
-		<meta property="og:type" content="Music player" />
+		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://nilt.herokuapp.com/" />
 		<meta property="og:image" content="http://i.imgur.com/szsdkHs.jpg" />
 		<meta property="og:description" content="This is a collaborative music player that plays the music people post on our facebook group wall. Join us!" />
